[package]
name = "shaded_island"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
noise = "0.8.2"
cgmath = { version = "0.18.0", features = ["swizzle"]}
video-rs = {version = "0.7.1", features = ["ndarray"]}
ndarray = "0.15.6"